[package]
name = "provider-cron-scheduler"
version = "0.1.0"
edition = "2021"
description = """
A capability provider template built for distributed cronjob scheduling.
"""

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1.0"
async-nats-39 = { package = "async-nats", version = "0.39" }
async-nats-40 = { package = "async-nats", version = "0.40", features = ["ring", "server_2_11"] }
bytes = "1"
chrono = "0.4"
cron = "0.12"
futures = { version = "0.3", features = ["async-await", "std"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
wasmcloud-core = { version = "0.20", features = ["messaging"]}
wasmcloud-provider-sdk = { version = "0.16.0", features = ["otel"] }
wasmcloud-provider-messaging-nats = "0.27.0"
wit-bindgen-wrpc = "0.9.0"
wascap = "0.16"